Add screen helper

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -6,7 +6,7 @@
   <title>Electron with Webpack and Typescript support</title>
 </head>
 
-<body class="px-2 py-2 h-screen">
+<body class="px-2 py-2 h-screen" style="display: none">
   <header class="flex justify-between">
     <p>Welcome</p>
     <a class="px-2 py-1 text-xs font-semibold shadow rounded bg-blue-600 hover:bg-blue-500 text-gray-200 hover:text-gray-100"
