--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -9,8 +9,9 @@
 <body class="px-2 py-2 h-screen" style="display: none">
   <header class="flex justify-between">
     <p>Welcome</p>
-    <a class="px-2 py-1 text-xs font-semibold shadow rounded bg-blue-600 hover:bg-blue-500 text-gray-200 hover:text-gray-100"
-      href="">GitHub</a>
+    <a id="repoLink"
+      class="px-2 py-1 text-xs font-semibold shadow rounded bg-blue-600 hover:bg-blue-500 text-gray-200 hover:text-gray-100"
+      data-repo-link="https://github.com/iprods/electron-typescript-webpack-template">GitHub</a>
   </header>
   <main class="pt-2">
     <h1 class="font-bold text-xl">Electron with Webpack and Typescript support</h1>
