Improve typescript config

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -39,7 +39,7 @@
           <path
             d="M44.869 61.394l-10.4-10.4a1.6 1.6 0 010-2.263l2.262-2.262a1.6 1.6 0 012.263 0L46 53.474 61.006 38.47a1.6 1.6 0 012.263 0l2.262 2.262a1.6 1.6 0 010 2.263l-18.4 18.4a1.6 1.6 0 01-2.262 0z" />
         </svg>
-        Typescript support with linting
+        Typescript support with linting and HMR
       </li>
       <li class="text-sm">
         <svg class="inline h-6 w-6 text-gray-200" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
